MP: Update likes 2021/05/51fc5

--- a/content/mf2/2021/05/51fc5.md
+++ b/content/mf2/2021/05/51fc5.md
@@ -4,7 +4,7 @@
   "draft" : false,
   "h" : "h-entry",
   "properties" : {
-    "syndication" : [ "https://brid.gy/publish/twitter" ],
+    "syndication" : [ "https://twitter.com/rakyll/status/1391635450889052160" ],
     "name" : [ "Like of @rakyll's tweet" ],
     "published" : [ "2021-05-10T07:37:00+0100" ],
     "category" : [ "technical-leadership" ],
